# AicodeX

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  SECURITY.md  config.example.json  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  tsconfig.json
.devcontainer/: devcontainer.json
.github/actions/copilot/setup-build-tools-enviroments/: action.yml
.github/workflows/: build.yml  ci.yaml  ci.yml  dependencies.yml  release.yml
config/: default_settings.json
docs/: BUILD.md  DEVELOPMENT.md  IMPLEMENTATION.md  QUICKSTART.md
scripts/: build.sh  clean.sh  install.sh  package.sh  test.sh  verify.sh
src/: config.py  engine.rs  hotkeys.py  index.test.ts  index.ts  lib.rs  main.py  main.rs  overlay.py
src/aicodex/: __init__.py  core.py  engine.py  hotkey.py  main.py
src/go/: go.mod
src/go/cmd/aicodex/: main.go
src/go/internal/hotkey/: hotkey.go  hotkey_test.go
src/go/internal/overlay/: overlay.go  overlay_test.go
src/python/: __init__.py  pyproject.toml
src/python/aicodex/: __init__.py  hotkey.py  main.py  overlay.py
src/python/tests/: __init__.py  test_hotkey.py  test_overlay.py
src/rust/: Cargo.toml  lib.rs  main.rs
src/rust/src/: hotkey.rs  lib.rs  main.rs  overlay.rs
src/typescript/: .eslintrc.js  index.ts  jest.config.js  overlay.ts  package-lock.json  package.json  tsconfig.json
src/typescript/src/: hotkey.test.ts  hotkey.ts  index.ts  overlay.test.ts  overlay.ts
src/utils/: __init__.py  handbrake_checker.py
tests/: __init__.py  test_config.py  test_core.py  test_handbrake_checker.py
tests/python/: test_engine.py  test_hotkey.py  test_main.py
tests/rust/: integration_test.rs
tests/typescript/: index.test.ts  overlay.test.ts
