[package]
name = "aicodex"
version = "0.1.0"
edition = "2021"
authors = ["NaTo1000"]
description = "A companion overlay code engine with hotkey enabled and highly customizable features"
license = "MIT"
repository = "https://github.com/NaTo1000/AicodeX"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
cargo-nextest = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "aicodex"
path = "src/main.rs"

[lib]
name = "aicodex"
path = "src/lib.rs"
