[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicodex"
version = "0.1.0"
description = "AicodeX - A companion overlay code engine with hotkey-enabled features"
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AicodeX Contributors" }
]
keywords = ["code", "overlay", "hotkey", "customizable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
aicodex = "aicodex.main:main"

[tool.hatch.build.targets.wheel]
packages = ["aicodex"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["aicodex"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=aicodex --cov-report=term-missing"

[tool.coverage.run]
source = ["aicodex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
